@@ -281,7 +281,7 @@ LINK sdf
 	WIDTH 12
 	ZORDER 95
 	INFOURL underneath
-	TARGET static:30M:50M
+	TARGET static:30M:50M "static:30M:10M" "test filename.rrd"
 	# USESCALE errors
 	NODES p1 p2
 	VIA 550 200
